hard-gists/b0c075cfde406280cbf7/run.log
=== Docker Run Log for b0c075cfde406280cbf7 ===
Started at: Mi 29. Okt 19:23:32 CET 2025

[2025-10-29 19:23:32] START: Running container for b0c075cfde406280cbf7
[2025-10-29 19:23:33] SUCCESS: Container 55894b0327b8e2c00c6ec28ea71d1594a5fe75efa8ae5348d5e5215a4ebcb489 started for b0c075cfde406280cbf7
=== Container logs for b0c075cfde406280cbf7 ===
  File "/snippet.py", line 11
    print 'Autenticated!'
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for b0c075cfde406280cbf7 ===
[2025-10-29 19:23:35] INFO: Container 55894b0327b8e2c00c6ec28ea71d1594a5fe75efa8ae5348d5e5215a4ebcb489 has stopped
